--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="200dp"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".activity.StartActivity">
@@ -46,7 +46,7 @@
     </LinearLayout>
 
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -60,7 +60,7 @@
             android:id="@+id/clrData"
             style="@style/startBtnStyles"
             android:text="@string/clear_data" />
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
