--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,11 +22,10 @@
     </style>
 
     <style name="startBtnStyles">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">30sp</item>
         <item name="android:layout_margin">10dp</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@drawable/startbtn_bg</item>
         <item name="android:padding">10dp</item>
