--- a/app/src/main/res/layout/candidates_item_layout.xml
+++ b/app/src/main/res/layout/candidates_item_layout.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/canVisual">
+
+    <!--needTosetMatchParent-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/edittext_bg"
+        android:background="@drawable/can_item_bg"
         android:orientation="vertical">
 
         <LinearLayout
