--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -12,7 +12,7 @@
     <style name="edittextstyle">
         <item name="android:layout_margin">10dp</item>
         <item name="android:padding">10dp</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:textAlignment" tools:ignore="NewApi">center</item>
         <item name="android:background">@drawable/edittext_bg</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -25,6 +25,16 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">30sp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@drawable/startbtn_bg</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
+    <style name="chooseBtnStyles">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:layout_margin">10dp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@drawable/startbtn_bg</item>
