--- a/app/src/main/res/layout/can_result_item.xml
+++ b/app/src/main/res/layout/can_result_item.xml
@@ -24,18 +24,18 @@
 
             <ImageView
                 android:id="@+id/candidateImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:src="@drawable/dummy_person" />
 
 
             <TextView
                 android:id="@+id/resultsCount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:textAlignment="center"
